--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = "0.3.22"
 tower-http = { version = "0.6.8", features = ["fs"] }
+pulldown-cmark = "0.12"
+serde_yaml = "0.9"
+chrono = { version = "0.4", features = ["serde"] }
+once_cell = "1.20"
